--- a/assets/theme.css
+++ b/assets/theme.css
@@ -3057,16 +3057,85 @@ ul, ol {
   fill: var(--secondaryColor);
   fill-opacity: 1;
 }
+.db-page--home .db-section--banner .hydrated {
+  scale: 0.8;
+  transition: scale 350ms ease-in-out 0ms;
+  max-width: 900px;
+  width: 100%;
+  min-width: 900px;
+  height: 500px;
+}
+@media only screen and (max-width: 1080px) {
+  .db-page--home .db-section--banner .hydrated {
+    max-width: 700px;
+    min-width: 700px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .db-page--home .db-section--banner .hydrated {
+    max-width: 100%;
+    height: 100%;
+    min-width: unset;
+    scale: 1;
+  }
+}
 .db-page--home .db-section--banner .db-chat-modal {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 999;
+  z-index: 10000;
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 100%;
+  visibility: hidden;
+  overflow: auto;
+  opacity: 0;
+  transition: visibility 350ms ease-in-out 10ms, opacity 350ms ease-in-out 10ms;
+}
+@media only screen and (max-width: 768px) {
+  .db-page--home .db-section--banner .db-chat-modal {
+    top: 0;
+    right: -100%;
+    bottom: 0;
+    left: unset;
+    visibility: visible;
+    opacity: 1;
+    transition: right 350ms ease-in-out 0ms;
+  }
+}
+.db-page--home .db-section--banner .db-chat-modal .db-svg-icon--close {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  display: none !important;
+  z-index: 2;
+  transform: rotate(0deg);
+  transition: transform 200ms ease-in-out 0ms;
+  cursor: pointer;
+}
+.db-page--home .db-section--banner .db-chat-modal .db-svg-icon--close:hover {
+  transform: rotate(180deg);
+}
+@media only screen and (max-width: 768px) {
+  .db-page--home .db-section--banner .db-chat-modal .db-svg-icon--close {
+    display: block !important;
+  }
+}
+.db-page--home .db-section--banner .db-chat-modal.--show-modal {
+  visibility: visible;
+  opacity: 1;
+}
+@media only screen and (max-width: 768px) {
+  .db-page--home .db-section--banner .db-chat-modal.--show-modal {
+    right: 0;
+  }
+}
+.db-page--home .db-section--banner .db-chat-modal.--show-modal .hydrated {
+  scale: 1;
 }
 .db-page--home .db-section--banner .db-chat-modal .db-chat-modal--bg-overlay {
   position: absolute;
@@ -3079,12 +3148,30 @@ ul, ol {
   height: 100%;
   background: rgba(12, 7, 15, 0.4);
 }
+@media only screen and (max-width: 768px) {
+  .db-page--home .db-section--banner .db-chat-modal .db-chat-modal--bg-overlay {
+    display: none;
+  }
+}
 .db-page--home .db-section--banner .db-chat-modal .db-chat-modal-wrapper {
   position: relative;
   max-width: 900px;
   width: 100%;
   min-width: 900px;
   height: 500px;
+}
+@media only screen and (max-width: 1080px) {
+  .db-page--home .db-section--banner .db-chat-modal .db-chat-modal-wrapper {
+    max-width: 700px;
+    min-width: 700px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .db-page--home .db-section--banner .db-chat-modal .db-chat-modal-wrapper {
+    max-width: 100%;
+    height: 100%;
+    min-width: unset;
+  }
 }
 .db-page--home .db-section--banner::after {
   content: "";
@@ -3151,15 +3238,22 @@ ul, ol {
   position: fixed;
   bottom: 40px;
   right: 40px;
-  max-width: 150px;
+  max-width: 100px;
   width: 100%;
-  min-width: 150px;
-  height: 150px;
+  min-width: 100px;
+  height: 100px;
   border-radius: 50%;
   cursor: pointer;
   z-index: 99;
   background: linear-gradient(180deg, #8D50A0 0%, #B522EB 135.7%);
   transition: background 200ms ease-in-out 0ms;
+}
+@media only screen and (max-width: 768px) {
+  .db-page--home .db-chat-logo {
+    max-width: 70px;
+    min-width: 70px;
+    height: 70px;
+  }
 }
 .db-page--home .db-chat-logo:hover {
   background: linear-gradient(180deg, #7DAA41 0%, #B1FF29 141.83%);
@@ -3177,14 +3271,37 @@ ul, ol {
   top: 50%;
   transform: translate(-50%, -50%);
 }
+.db-page--home .db-chat-logo .db-chat-logo--wrapper > svg:nth-child(1) {
+  display: block;
+}
+@media only screen and (max-width: 768px) {
+  .db-page--home .db-chat-logo .db-chat-logo--wrapper > svg:nth-child(1) {
+    display: none;
+  }
+}
+.db-page--home .db-chat-logo .db-chat-logo--wrapper > svg:nth-child(2) {
+  display: none;
+}
+@media only screen and (max-width: 768px) {
+  .db-page--home .db-chat-logo .db-chat-logo--wrapper > svg:nth-child(2) {
+    display: block;
+  }
+}
 .db-page--home .db-chat-logo .db-chat-logo--wrapper > img {
   position: absolute;
-  max-width: 100px;
-  min-width: 100px;
-  height: 100px;
+  max-width: 70px;
+  min-width: 70px;
+  height: 70px;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+}
+@media only screen and (max-width: 768px) {
+  .db-page--home .db-chat-logo .db-chat-logo--wrapper > img {
+    max-width: 50px;
+    min-width: 50px;
+    height: 50px;
+  }
 }
 
 .db-page--about-us .db-section--about-us {
