feature: merch store product filter and product search and mobile responsiveness;

--- a/styles/db-theme/base/_media.scss
+++ b/styles/db-theme/base/_media.scss
@@ -3,6 +3,8 @@
 /*===================*/
 @media only screen and (max-width: 1440px) {}
 
+@media only screen and (max-width: 1200px) {}
+
 @media only screen and (max-width: 1080px) {}
 
 @media only screen and (max-width: 768px) {}
