--- a/styles/db-theme/pages/_page--product.scss
+++ b/styles/db-theme/pages/_page--product.scss
@@ -520,10 +520,11 @@
 
                 &--buy-it-now {
                   background-color: $secondary-color;
+                  opacity: 1;
                   border-color: $secondary-color;
 
                   &:hover {
-                    background-color: transparent;
+                    opacity: 0.7;
                   }
                 }
 
