--- a/styles/db-theme/components/_cart.scss
+++ b/styles/db-theme/components/_cart.scss
@@ -1,33 +1,51 @@
 .db-shopping-cart {
   position: fixed;
-  z-index: 99999;
-  top: 0;
-  right: -585px;
-  bottom: 0;
+  z-index: 9;
+  inset: 0;
   display: block;
-  background-color: #0C0814;
-  max-width: 585px;
-  min-width: 585px;
+  visibility: hidden;
+  opacity: 0;
   width: 100%;
   height: 100%;
   overflow: hidden auto;
   transition:
-    right $click-transition-duration ease-in-out 0ms;
+    z-index 0ms ease-in-out 500ms,
+    visibility 0ms ease-in-out 500ms,
+    opacity 0ms ease-in-out 500ms;
 
-  @media only screen and (max-width: 768px) {
-    right: -100%;
-    max-width: 100%;
-    min-width: unset;
+  .db-cart-overlay {
+    position: absolute;
+    z-index: 1;
+    inset: 0;
+    display: block;
+    background-color: #0C0814;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    transition:
+      opacity $click-transition-duration ease-in-out 0ms;
   }
 
   .db-cart-wrap {
+    position: absolute;
+    z-index: 2;
+    right: -585px;
     --headHeight: 70px;
     --footHeight: 395px;
+    display: block;
+    background-color: #0C0814;
+    max-width: 585px;
+    min-width: 585px;
     width: 100%;
-
+    transition:
+      right $click-transition-duration ease-in-out 0ms;
+    
     @media only screen and (max-width: 768px) {
       --headHeight: 45px;
       --footHeight: 250px;
+      right: -100%;
+      max-width: 100%;
+      min-width: unset;
     }
 
     @media only screen and (max-width: 480px) {
@@ -98,6 +116,7 @@
     .db-cart-body {
       position: relative;
       z-index: 1;
+      background-color: #0C0814;
       height: auto;
       overflow: hidden;
 
@@ -539,10 +558,24 @@
 
 .--show-cart {
   .db-shopping-cart {
-    right: 0;
+    z-index: 99999;
+    visibility: visible;
+    opacity: 1;
+    transition:
+      z-index 0ms ease-in-out 0ms,
+      visibility 0ms ease-in-out 0ms,
+      opacity 0ms ease-in-out 0ms;
 
-    @media only screen and (max-width: 768px) {
-      right: 0%;
+    .db-cart-overlay {
+      opacity: 0.5;
+    }
+
+    .db-cart-wrap {
+      right: 0;
+
+      @media only screen and (max-width: 768px) {
+        right: 0%;
+      }
     }
   }
 }
