modify: some filters to get dynamically base on the metafields which i have added to their store to have good presentaion on products filters

--- a/snippets/cart.liquid
+++ b/snippets/cart.liquid
@@ -1,8 +1,8 @@
-<div class="db-shopping-cart db-scroll-bar">
+<div class="db-shopping-cart">
   <div class="db-cart-overlay"
     @click="closeCart();">
   </div>
-  <aside class="db-cart-wrap">
+  <aside class="db-cart-wrap db-scroll-bar">
     <div class="db-cart-head">
       <h5>
         YOUR SHOPPING CART
