--- a/assets/theme.css
+++ b/assets/theme.css
@@ -1415,7 +1415,6 @@ ul, ol {
   opacity: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden auto;
   transition: z-index 0ms ease-in-out 500ms, visibility 0ms ease-in-out 500ms, opacity 0ms ease-in-out 500ms;
 }
 .db-shopping-cart .db-cart-overlay {
@@ -1440,6 +1439,8 @@ ul, ol {
   max-width: 585px;
   min-width: 585px;
   width: 100%;
+  height: 100%;
+  overflow: hidden auto;
   transition: right var(--click-transition-duration) ease-in-out 0ms;
 }
 @media only screen and (max-width: 768px) {
@@ -1520,7 +1521,6 @@ ul, ol {
   z-index: 1;
   background-color: #0C0814;
   height: auto;
-  overflow: hidden;
 }
 .db-shopping-cart .db-cart-wrap .db-cart-body .product-list {
   position: relative;
@@ -11589,6 +11589,7 @@ ul, ol {
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
+  text-transform: uppercase;
   line-height: 1em;
   white-space: nowrap;
   display: block;
