--- a/styles/db-theme/pages/_page--merch-store.scss
+++ b/styles/db-theme/pages/_page--merch-store.scss
@@ -578,6 +578,7 @@
                     font-size: 18px;
                     font-style: normal;
                     font-weight: 400;
+                    text-transform: uppercase;
                     line-height: 1em;
                     white-space: nowrap;
                     display: block;
