--- a/assets/theme.css
+++ b/assets/theme.css
@@ -11872,7 +11872,15 @@ ul, ol {
     width: 100%;
   }
 }
-.db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort .db-btn--sort-toggle {
+.db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort .ds-view {
+  display: block;
+}
+@media only screen and (max-width: 768px) {
+  .db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort .ds-view {
+    display: none;
+  }
+}
+.db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort .ds-view .db-btn--sort-toggle {
   position: relative;
   z-index: 1;
   display: flex;
@@ -11884,16 +11892,16 @@ ul, ol {
   border-radius: 5px;
 }
 @media only screen and (max-width: 1080px) {
-  .db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort .db-btn--sort-toggle {
+  .db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort .ds-view .db-btn--sort-toggle {
     padding: 10px 16px;
   }
 }
 @media only screen and (max-width: 480px) {
-  .db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort .db-btn--sort-toggle {
+  .db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort .ds-view .db-btn--sort-toggle {
     width: 100%;
   }
 }
-.db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort .db-btn--sort-toggle .label {
+.db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort .ds-view .db-btn--sort-toggle .label {
   color: var(--white-color);
   font-family: var(--primary-font-family);
   font-size: 14px;
@@ -11905,10 +11913,10 @@ ul, ol {
   white-space: nowrap;
   display: block;
 }
-.db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort .db-btn--sort-toggle .svg-icon-arrow-up-arrow-down {
+.db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort .ds-view .db-btn--sort-toggle .svg-icon-arrow-up-arrow-down {
   display: block;
 }
-.db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort > .sort-select {
+.db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort .ds-view > .sort-select {
   position: absolute;
   z-index: 2;
   right: 0;
@@ -11920,18 +11928,18 @@ ul, ol {
   border: 1px solid rgba(255, 255, 255, 0.4);
 }
 @media only screen and (max-width: 768px) {
-  .db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort > .sort-select {
+  .db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort .ds-view > .sort-select {
     right: unset;
     left: 0;
   }
 }
 @media only screen and (max-width: 480px) {
-  .db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort > .sort-select {
+  .db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort .ds-view > .sort-select {
     right: 0;
     width: 100%;
   }
 }
-.db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort > .sort-select .sort-option {
+.db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort .ds-view > .sort-select .sort-option {
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -11940,18 +11948,18 @@ ul, ol {
   padding: 6px;
   cursor: pointer;
 }
-.db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort > .sort-select .sort-option .svg-icon-custom-radio {
+.db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort .ds-view > .sort-select .sort-option .svg-icon-custom-radio {
   cursor: pointer;
 }
-.db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort > .sort-select .sort-option .svg-icon-custom-radio #circle_01 {
+.db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort .ds-view > .sort-select .sort-option .svg-icon-custom-radio #circle_01 {
   display: none;
   fill: #6B6B6B;
 }
-.db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort > .sort-select .sort-option .svg-icon-custom-radio #circle_02 {
+.db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort .ds-view > .sort-select .sort-option .svg-icon-custom-radio #circle_02 {
   display: block;
   stroke: #6B6B6B;
 }
-.db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort > .sort-select .sort-option .sort-label {
+.db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort .ds-view > .sort-select .sort-option .sort-label {
   color: var(--white-color);
   font-family: var(--primary-font-family);
   font-size: 14px;
@@ -11963,22 +11971,56 @@ ul, ol {
   transition: color var(--hover-transition-duration) ease-in-out 0ms;
   cursor: pointer;
 }
-.db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort > .sort-select .sort-option.--selected .svg-icon-custom-radio, .db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort > .sort-select .sort-option:hover .svg-icon-custom-radio {
+.db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort .ds-view > .sort-select .sort-option.--selected .svg-icon-custom-radio, .db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort .ds-view > .sort-select .sort-option:hover .svg-icon-custom-radio {
   cursor: pointer;
 }
-.db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort > .sort-select .sort-option.--selected .svg-icon-custom-radio #circle_01, .db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort > .sort-select .sort-option:hover .svg-icon-custom-radio #circle_01 {
+.db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort .ds-view > .sort-select .sort-option.--selected .svg-icon-custom-radio #circle_01, .db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort .ds-view > .sort-select .sort-option:hover .svg-icon-custom-radio #circle_01 {
   display: block;
   fill: var(--primary-color);
 }
-.db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort > .sort-select .sort-option.--selected .svg-icon-custom-radio #circle_02, .db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort > .sort-select .sort-option:hover .svg-icon-custom-radio #circle_02 {
+.db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort .ds-view > .sort-select .sort-option.--selected .svg-icon-custom-radio #circle_02, .db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort .ds-view > .sort-select .sort-option:hover .svg-icon-custom-radio #circle_02 {
   display: block;
   stroke: var(--primary-color);
 }
-.db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort > .sort-select .sort-option.--selected .sort-label, .db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort > .sort-select .sort-option:hover .sort-label {
+.db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort .ds-view > .sort-select .sort-option.--selected .sort-label, .db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort .ds-view > .sort-select .sort-option:hover .sort-label {
   color: var(--primary-color);
 }
 .db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort .mb-view {
   display: none;
+}
+@media only screen and (max-width: 768px) {
+  .db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort .mb-view {
+    display: block;
+  }
+}
+.db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort .mb-view > .sort-select {
+  color: var(--white-color);
+  font-family: var(--primary-font-family);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  text-transform: uppercase;
+  line-height: 1.25em;
+  letter-spacing: -0.56px;
+  white-space: nowrap;
+  background-color: #04030D;
+  width: 100%;
+  padding: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.4);
+  border-radius: 5px;
+}
+.db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort .mb-view > .sort-select .sort-option {
+  color: var(--white-color);
+  font-family: var(--primary-font-family);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  text-transform: uppercase;
+  line-height: 1.25em;
+  letter-spacing: -0.56px;
+  white-space: nowrap;
+  display: block;
+  background-color: #04030D;
 }
 .db-page--merch-store .db-section--merch-store-listing .db-container .db-row .db-col:nth-of-type(2) .db-inner-row .product-sort.--toggle .sort-select {
   visibility: visible;
