--- a/templates/page.merch-store.liquid
+++ b/templates/page.merch-store.liquid
@@ -7,10 +7,10 @@
     <div class="db-container">
       <div class="db-row">
         <h1>
-          UNLEASH YOUR UNDEAD FASHION
+          PROOF YOU"RE UNDEAD
         </h1>
         <p>
-          Discover official and licensed of exclusive merch items and collectibles of Deadbeat
+          You ain't dyin' if you ain't buyin'
         </p>
         <div class="search-wrap">
           <div class="search-bar">
@@ -283,62 +283,64 @@
             </button>
             <div class="product-sort"
               :class="{ '--toggle' : shop.products.sort.toggle }">
-              <button class="db-btn--sort-toggle"
-                type="button"
-                @click="toggleProductSort();">
-                <span class="label">
-                  SORT
-                </span>
-                <svg class="svg-icon-arrow-up-arrow-down db-svg"
-                  width="14"
-                  height="16"
-                  viewBox="0 0 14 16"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <path id="path_01"
-                    d="M8.35785 3.27934C8.49847 3.41979 8.6891 3.49868 8.88785 3.49868C9.0866 3.49868 9.27722 3.41979 9.41785 3.27934L10.1378 2.55934V12.7493C10.1378 12.9483 10.2169 13.139 10.3575 13.2797C10.4982 13.4203 10.6889 13.4993 10.8878 13.4993C11.0868 13.4993 11.2775 13.4203 11.4182 13.2797C11.5588 13.139 11.6378 12.9483 11.6378 12.7493V2.55934L12.3578 3.27934C12.4265 3.35303 12.5093 3.41213 12.6013 3.45312C12.6933 3.49411 12.7926 3.51615 12.8933 3.51793C12.994 3.51971 13.0941 3.50118 13.1874 3.46346C13.2808 3.42574 13.3657 3.3696 13.4369 3.29838C13.5081 3.22716 13.5643 3.14233 13.602 3.04894C13.6397 2.95555 13.6582 2.85552 13.6564 2.75482C13.6547 2.65411 13.6326 2.5548 13.5916 2.4628C13.5506 2.3708 13.4915 2.288 13.4178 2.21934L11.4178 0.21934C11.2772 0.0788894 11.0866 0 10.8878 0C10.6891 0 10.4985 0.0788894 10.3578 0.21934L8.35785 2.21934C8.2174 2.35997 8.13851 2.55059 8.13851 2.74934C8.13851 2.94809 8.2174 3.13871 8.35785 3.27934ZM3.63785 12.9393L4.35785 12.2193C4.42651 12.1457 4.50931 12.0866 4.60131 12.0456C4.69331 12.0046 4.79262 11.9825 4.89333 11.9807C4.99403 11.979 5.09406 11.9975 5.18745 12.0352C5.28083 12.0729 5.36567 12.1291 5.43689 12.2003C5.50811 12.2715 5.56425 12.3564 5.60197 12.4497C5.63969 12.5431 5.65822 12.6432 5.65644 12.7439C5.65466 12.8446 5.63262 12.9439 5.59163 13.0359C5.55064 13.1279 5.49154 13.2107 5.41785 13.2793L3.41785 15.2793C3.27722 15.4198 3.0866 15.4987 2.88785 15.4987C2.6891 15.4987 2.49847 15.4198 2.35785 15.2793L0.357849 13.2793C0.284162 13.2107 0.22506 13.1279 0.184068 13.0359C0.143076 12.9439 0.121034 12.8446 0.119257 12.7439C0.117481 12.6432 0.136005 12.5431 0.173726 12.4497C0.211447 12.3564 0.267592 12.2715 0.33881 12.2003C0.410029 12.1291 0.494863 12.0729 0.588251 12.0352C0.681639 11.9975 0.781668 11.979 0.882371 11.9807C0.983074 11.9825 1.08239 12.0046 1.17439 12.0456C1.26639 12.0866 1.34919 12.1457 1.41785 12.2193L2.13785 12.9393V2.74934C2.13785 2.55043 2.21687 2.35966 2.35752 2.21901C2.49817 2.07836 2.68894 1.99934 2.88785 1.99934C3.08676 1.99934 3.27753 2.07836 3.41818 2.21901C3.55883 2.35966 3.63785 2.55043 3.63785 2.74934V12.9393Z"
-                    fill="#FFFFFF">
-                  </path>
-                </svg>
-              </button>
-              <ul class="sort-select">
-                <template v-for="(sortItem, sortIndex) in shop.products.sort.list">
-                  <li class="sort-option"
-                    :class="{ '--selected' : sortItem == shop.products.sort.selected }"
-                    @click="selectedProductSort(sortItem);">
-                    <svg class="svg-icon-custom-radio"
-                      width="15"
-                      height="15"
-                      viewBox="0 0 15 15"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg">
-                      <circle id="circle_01"
-                        cx="7.5"
-                        cy="7.5"
-                        r="4.5"
-                        fill="#6B6B6B">
-                      </circle>
-                      <circle id="circle_02"
-                        cx="7.5"
-                        cy="7.5"
-                        r="7"
-                        stroke="#6B6B6B">
-                      </circle>
-                    </svg>
-                    <label class="sort-label"
-                      :for="'Sort :'+sortItem"
-                      v-text="sortItem">
-                    </label>
-                  </li>
-                </template>
-              </ul>
+              <div class="ds-view">
+                <button class="db-btn--sort-toggle"
+                  type="button"
+                  @click="toggleProductSort();">
+                  <span class="label">
+                    SORT
+                  </span>
+                  <svg class="svg-icon-arrow-up-arrow-down db-svg"
+                    width="14"
+                    height="16"
+                    viewBox="0 0 14 16"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path id="path_01"
+                      d="M8.35785 3.27934C8.49847 3.41979 8.6891 3.49868 8.88785 3.49868C9.0866 3.49868 9.27722 3.41979 9.41785 3.27934L10.1378 2.55934V12.7493C10.1378 12.9483 10.2169 13.139 10.3575 13.2797C10.4982 13.4203 10.6889 13.4993 10.8878 13.4993C11.0868 13.4993 11.2775 13.4203 11.4182 13.2797C11.5588 13.139 11.6378 12.9483 11.6378 12.7493V2.55934L12.3578 3.27934C12.4265 3.35303 12.5093 3.41213 12.6013 3.45312C12.6933 3.49411 12.7926 3.51615 12.8933 3.51793C12.994 3.51971 13.0941 3.50118 13.1874 3.46346C13.2808 3.42574 13.3657 3.3696 13.4369 3.29838C13.5081 3.22716 13.5643 3.14233 13.602 3.04894C13.6397 2.95555 13.6582 2.85552 13.6564 2.75482C13.6547 2.65411 13.6326 2.5548 13.5916 2.4628C13.5506 2.3708 13.4915 2.288 13.4178 2.21934L11.4178 0.21934C11.2772 0.0788894 11.0866 0 10.8878 0C10.6891 0 10.4985 0.0788894 10.3578 0.21934L8.35785 2.21934C8.2174 2.35997 8.13851 2.55059 8.13851 2.74934C8.13851 2.94809 8.2174 3.13871 8.35785 3.27934ZM3.63785 12.9393L4.35785 12.2193C4.42651 12.1457 4.50931 12.0866 4.60131 12.0456C4.69331 12.0046 4.79262 11.9825 4.89333 11.9807C4.99403 11.979 5.09406 11.9975 5.18745 12.0352C5.28083 12.0729 5.36567 12.1291 5.43689 12.2003C5.50811 12.2715 5.56425 12.3564 5.60197 12.4497C5.63969 12.5431 5.65822 12.6432 5.65644 12.7439C5.65466 12.8446 5.63262 12.9439 5.59163 13.0359C5.55064 13.1279 5.49154 13.2107 5.41785 13.2793L3.41785 15.2793C3.27722 15.4198 3.0866 15.4987 2.88785 15.4987C2.6891 15.4987 2.49847 15.4198 2.35785 15.2793L0.357849 13.2793C0.284162 13.2107 0.22506 13.1279 0.184068 13.0359C0.143076 12.9439 0.121034 12.8446 0.119257 12.7439C0.117481 12.6432 0.136005 12.5431 0.173726 12.4497C0.211447 12.3564 0.267592 12.2715 0.33881 12.2003C0.410029 12.1291 0.494863 12.0729 0.588251 12.0352C0.681639 11.9975 0.781668 11.979 0.882371 11.9807C0.983074 11.9825 1.08239 12.0046 1.17439 12.0456C1.26639 12.0866 1.34919 12.1457 1.41785 12.2193L2.13785 12.9393V2.74934C2.13785 2.55043 2.21687 2.35966 2.35752 2.21901C2.49817 2.07836 2.68894 1.99934 2.88785 1.99934C3.08676 1.99934 3.27753 2.07836 3.41818 2.21901C3.55883 2.35966 3.63785 2.55043 3.63785 2.74934V12.9393Z"
+                      fill="#FFFFFF">
+                    </path>
+                  </svg>
+                </button>
+                <ul class="sort-select">
+                  <template v-for="(sortItem, sortIndex) in shop.products.sort.list">
+                    <li class="sort-option"
+                      :class="{ '--selected' : sortItem == shop.products.sort.selected }"
+                      @click="selectedProductSort(sortItem);">
+                      <svg class="svg-icon-custom-radio"
+                        width="15"
+                        height="15"
+                        viewBox="0 0 15 15"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <circle id="circle_01"
+                          cx="7.5"
+                          cy="7.5"
+                          r="4.5"
+                          fill="#6B6B6B">
+                        </circle>
+                        <circle id="circle_02"
+                          cx="7.5"
+                          cy="7.5"
+                          r="7"
+                          stroke="#6B6B6B">
+                        </circle>
+                      </svg>
+                      <label class="sort-label"
+                        :for="'Sort :'+sortItem"
+                        v-text="sortItem">
+                      </label>
+                    </li>
+                  </template>
+                </ul>
+              </div>
               <div class="mb-view">
                 <select class="sort-select"
                   id=""
                   name=""
                   v-model="shop.products.sort.selected">
                   <template v-for="(sortItem, sortIndex) in shop.products.sort.list">
-                    <option class="sort-otion"
+                    <option class="sort-option"
                       :value="sortItem"
                       v-text="sortItem">
                     </option>
