--- a/templates/page.merch-store.liquid
+++ b/templates/page.merch-store.liquid
@@ -7,7 +7,7 @@
     <div class="db-container">
       <div class="db-row">
         <h1>
-          PROOF YOU"RE UNDEAD
+          PROOF YOU'RE UNDEAD
         </h1>
         <p>
           You ain't dyin' if you ain't buyin'
