--- a/styles/db-theme/pages/_page--product.scss
+++ b/styles/db-theme/pages/_page--product.scss
@@ -37,18 +37,17 @@
       .db-row {
         justify-content: space-between;
         align-items: flex-start;
-        gap: 12px 73px;
+        gap: 40px 73px;
 
         @media only screen and (max-width: 1440px) {
-          gap: 12px 60px;
+          gap: 40px 60px;
         }
 
         @media only screen and (max-width: 1080px) {
-          gap: 12px 40px;
+          gap: 40px;
         }
 
         @media only screen and (max-width: 1080px) {
-          gap: 12px 40px;
           margin: 0 auto 30px;
         }
 
@@ -58,31 +57,54 @@
 
         .db-col {
           &:nth-of-type(1) {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+            gap: 18px;
             max-width: 670px;
             min-width: 330px;
             width: 100%;
 
-            .product-img {
+            .product-img-wrap {
+              max-width: 80px;
+              min-width: 80px;
+              width: 100%;
+              height: 600px;
+              overflow: auto;
+              scroll-behavior: smooth;
+
+              .product-img-list {
+                display: flex;
+                flex-direction: column;
+                gap: 15px;
+                width: 100%;
+
+                .product-img-item {
+                  display: block;
+                  background-position: center;
+                  background-repeat: no-repeat;
+                  background-size: cover;
+                  width: 100%;
+                  height: 82px;
+                  border: 2px solid transparent;
+                  cursor: pointer;
+
+                  &.--selected {
+                    border-color: $secondary-color;
+                  }
+                }
+              }
+            }
+
+            .product-selected-img {
               display: block;
               width: 100%;
-              height: 750px;
+              height: auto;
               object-fit: cover;
               object-position: center;
-
-              @media only screen and (max-width: 1440px) {
-                height: 670px;
-              }
-
-              @media only screen and (max-width: 1200px) {
-                height: 540px;
-              }
+              overflow: hidden;
 
               @media only screen and (max-width: 1080px) {
-                height: 510px;
-              }
-
-              @media only screen and (max-width: 768px) {
-                max-width: 480px;
                 height: auto;
                 margin: 0 auto;
               }
